src/snapshots/bminor__parser__test__declaration_statement-4.snap
---
source: src/parser.rs
expression: "parse_statement(\"bool: boolean;\")"
---
Ok(
    VariableDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "bool",
            line: 0,
        },
        variable_type: Atomic {
            kind: Token {
                kind: Boolean,
                lexeme: "boolean",
                line: 0,
            },
            initializer: None,
        },
    },
)
