src/snapshots/bminor__parser__test__declaration_statement-42.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function boolean (a: array [\")"
---
Err(
    UnexpectedToken(
        "expect ']'",
    ),
)
