src/snapshots/bminor__parser__test__declaration_statement-43.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function boolean (a: array []\")"
---
Err(
    UnexpectedToken(
        "expect array type",
    ),
)
