src/snapshots/bminor__parser__test__declaration_statement-44.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function boolean (a: array [] string);\")"
---
Ok(
    PrototypeDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "fn",
            line: 0,
        },
        return_kind: Token {
            kind: Boolean,
            lexeme: "boolean",
            line: 0,
        },
        params: [
            Param {
                name: Token {
                    kind: Identifier,
                    lexeme: "a",
                    line: 0,
                },
                kind: Array {
                    kind: String,
                },
            },
        ],
    },
)
