src/snapshots/bminor__parser__test__declaration_statement-5.snap
---
source: src/parser.rs
expression: "parse_statement(\"ch: char;\")"
---
Ok(
    VariableDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "ch",
            line: 0,
        },
        variable_type: Atomic {
            kind: Token {
                kind: Char,
                lexeme: "char",
                line: 0,
            },
            initializer: None,
        },
    },
)
