src/snapshots/bminor__parser__test__declaration_statement-6.snap
---
source: src/parser.rs
expression: "parse_statement(\"str: string;\")"
---
Ok(
    VariableDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "str",
            line: 0,
        },
        variable_type: Atomic {
            kind: Token {
                kind: String,
                lexeme: "string",
                line: 0,
            },
            initializer: None,
        },
    },
)
