src/snapshots/bminor__parser__test__declaration_statement-8.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [;\")"
---
Err(
    UnexpectedToken(
        "expect expression",
    ),
)
