src/snapshots/bminor__parser__test__declaration_statement-9.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [1;\")"
---
Err(
    UnexpectedToken(
        "expect right bracket",
    ),
)
